# onita

./: .gitignore  openapi.json  pyproject.toml  run-server.sh
alembic/versions/: 331aa943c231_create_tables.py
app/: __init__.py  api.py  crud.py  models.py  schemas.py  server.py
app/templates/: Movie_template.csv  Rating_template.csv
app/utils/: common.py  database.py  upload.py
